fixing insert patient condition & swagger
